# MyindCAD

./: .gitignore  CMakeLists.txt  LICENSE.txt  phase1_success.cpp  test_all_operations.cpp  test_boolean_full.cpp
core/: CMakeLists.txt
core/io/: STLExport.cpp  STLExport.h
core/part/: BooleanOperations.cpp  BooleanOperations.h  CMakeLists.txt  Edge.h  Face.h  Part.cpp  Part.h  Point3D.h  SketcherToSolid.cpp  SketcherToSolid.h  Vertex.h  solid.h  test.cpp
core/sketcher/: CMakeLists.txt  Constraint.h  Point.h  Sketch.cpp  Sketch.h  curve.h
tests/: CMakeLists.txt  test_boolean.cpp  test_cylinders.cpp  test_extrusion.cpp  test_part.cpp  test_phase1_complete.cpp  test_sketcher.cpp
